--- a/25c3659/25c3659_vs_adffe19.md
+++ b/25c3659/25c3659_vs_adffe19.md
@@ -4,9 +4,9 @@
 
 *Commit(s):* [jrevels/julia@25c3659](https://github.com/jrevels/julia/commit/25c3659d6cec2ebf6e6c7d16b03adac76a47b42a) vs [JuliaLang/julia@adffe19](https://github.com/JuliaLang/julia/commit/adffe19dfb704444789429bffa51f4e05b386125)
 
-*Tag Predicate:* `"arrays" || "indexing"`
+*Tag Predicate:* `"arrays" && !("small" || "Float")`
 
-*Triggered By:* [link](https://github.com/jrevels/julia/pull/2#issuecomment-168351998)
+*Triggered By:* [link](https://github.com/jrevels/julia/pull/2#discussion_r48678781)
 
 ## Results
 
@@ -16,188 +16,60 @@ for this JSON data to get out of sync with the below table. This would only happ
 of a network error during the job, and as such is very unlikely. Just in case, you can always
 verify that they are synced up by checking the commit history of both files.
 
-The values in the below table are ratios of the head commit result vs. comparison commit
-result for the corresponding metric. Thus, `x < 1.0` would denote an improvement, while
-`x > 1.0` would denote a regression. Note, however, that a default tolerance of `0.10` is
-applied when passing judgment on these results. For convenience, failures are marked with
-an **{F}**.
+The ratio values in the below table equal `head_result / comparison_result` for each corresponding
+metric. Thus, `x < 1.0` would denote an improvement, while `x > 1.0` would denote a regression.
+In reality, only results that exceed `1.2` are counted as regressions (a default tolerance of
+`0.2` is applied to account for the variance of our test hardware). For convenience, regressions are
+marked with an **{R}**.
 
 | Benchmark ID | time | % of time spent in GC | bytes allocated | number of allocations |
 |--------------|------|-----------------------|-----------------|-----------------------|
-| `(:sumlinear,"Array{Float32,2}",100000)` | 1.0 | 1.0 | 1.0 | 1.0 |
-| `(:sumlinear,"Array{Float32,2}",100)` | 1.0 | 1.0 | 1.0 | 1.0 |
-| `(:sumcartesian,"BaseBenchmarks.ArrayBenchmarks.ArrayLF{Float32,2}",100)` | 0.99 | 1.0 | 1.0 | 1.0 |
-| `(:sumeach,"BaseBenchmarks.ArrayBenchmarks.ArrayLSLS{Float32,2}",100000)` | 0.97 | 1.0 | 1.0 | 1.0 |
-| `(:sumrange,"BitArray{2}",100)` | **3.28 {F}** | 0.36 | **1.13 {F}** | **1.17 {F}** |
-| `(:sumlinear,"SubArray{Float32,2,Array{Float32,2},Tuple{UnitRange{Int64},UnitRange{Int64}},1}",100)` | 0.98 | 1.04 | 1.0 | 1.0 |
-| `(:sumlinear,"BaseBenchmarks.ArrayBenchmarks.ArrayLSLS{Float32,2}",100)` | 0.99 | 1.0 | 1.0 | 1.0 |
+| `(:sumlinear,"SubArray{Int64,2,Array{Int64,2},Tuple{UnitRange{Int64},UnitRange{Int64}},1}",100)` | 0.98 | 1.01 | 1.0 | 1.0 |
+| `(:sumelt,"BaseBenchmarks.ArrayBenchmarks.ArrayLS{Int64,2}",100)` | 0.89 | 1.0 | 1.0 | 1.0 |
+| `(:sumlinear,"BaseBenchmarks.ArrayBenchmarks.ArrayLSLS{Int64,2}",100)` | 0.97 | 1.0 | 1.0 | 1.0 |
+| `(:sumrange,"BitArray{2}",100)` | **3.99 {R}** | 0.29 | 1.13 | 1.17 |
 | `(:sumeach,"Array{Int64,2}",100)` | 1.0 | 1.0 | 1.0 | 1.0 |
-| `(:sumrange,"BaseBenchmarks.ArrayBenchmarks.ArrayLS{Int64,2}",100000)` | **4.51 {F}** | 0.3 | **1.27 {F}** | **1.5 {F}** |
-| `(:sumvector,"Array{Int64,2}",100000)` | **3.5 {F}** | 0.43 | **1.37 {F}** | **2.0 {F}** |
-| `(:sumcartesian,"BaseBenchmarks.ArrayBenchmarks.ArrayLSLS{Float32,2}",100000)` | 0.95 | 1.0 | 1.0 | 1.0 |
-| `(:sumlinear,"BaseBenchmarks.ArrayBenchmarks.ArrayLF{Int64,2}",100000)` | 1.01 | 1.0 | 1.0 | 1.0 |
-| `(:sumcartesian,"Array{Int64,2}",100)` | 0.77 | 1.0 | 1.0 | 1.0 |
-| `(:sumrange,"BaseBenchmarks.ArrayBenchmarks.ArrayLSLS{Int64,2}",100)` | **1.92 {F}** | 0.58 | 1.02 | **1.4 {F}** |
-| `(:sumelt,"BaseBenchmarks.ArrayBenchmarks.ArrayLF{Float32,2}",100)` | 1.0 | 1.0 | 1.0 | 1.0 |
-| `(:sumlinear,"BaseBenchmarks.ArrayBenchmarks.ArrayLF{Float32,2}",100000)` | 1.0 | 1.0 | 1.0 | 1.0 |
-| `(:sumcolon,"Array{Int64,2}",100000)` | 0.9 | **1.19 {F}** | 1.0 | 1.0 |
-| `(:sumvector,"BaseBenchmarks.ArrayBenchmarks.ArrayLS{Float32,2}",100000)` | **3.81 {F}** | 0.51 | **1.43 {F}** | **2.0 {F}** |
-| `(:sumeach,"SubArray{Int64,2,Array{Int64,2},Tuple{UnitRange{Int64},UnitRange{Int64}},1}",100)` | **1.13 {F}** | 1.0 | 1.0 | 1.0 |
-| `(:sumrange,"BaseBenchmarks.ArrayBenchmarks.ArrayLS{Int64,2}",100)` | **1.7 {F}** | 0.63 | 1.02 | **1.5 {F}** |
-| `(:sumelt,"BaseBenchmarks.ArrayBenchmarks.ArrayLSLS{Float32,2}",100000)` | 1.05 | 1.0 | 1.0 | 1.0 |
-| `(:sumlinear,"SubArray{Float32,2,Array{Float32,2},Tuple{UnitRange{Int64},UnitRange{Int64}},1}",100000)` | 0.98 | **1.1 {F}** | 1.0 | 1.0 |
-| `(:sumlogical,"BitArray{2}",100)` | **1.13 {F}** | 0.95 | 1.06 | **1.5 {F}** |
-| `(:sumvector,"Array{Float32,2}",100000)` | **3.78 {F}** | 0.52 | **1.43 {F}** | **2.0 {F}** |
-| `(:sumvector,"Array{Float32,2}",100)` | **3.49 {F}** | 0.66 | **1.43 {F}** | **2.0 {F}** |
-| `(:sumcolon,"BaseBenchmarks.ArrayBenchmarks.ArrayLS{Float32,2}",100000)` | 1.0 | 1.04 | 1.0 | 1.0 |
-| `(:sumelt,"Array{Int64,2}",100)` | 1.0 | 1.0 | 1.0 | 1.0 |
-| `(:sumcartesian,"SubArray{Int64,2,Array{Int64,2},Tuple{UnitRange{Int64},UnitRange{Int64}},1}",100)` | 1.1 | 1.0 | 1.0 | 1.0 |
-| `(:sumlogical,"BaseBenchmarks.ArrayBenchmarks.ArrayLS{Int64,2}",100000)` | **3.07 {F}** | 0.44 | **1.27 {F}** | **1.67 {F}** |
-| `(:sumcolon,"Array{Float32,2}",100000)` | 0.95 | 1.09 | 1.0 | 1.0 |
-| `(:sumcolon,"Array{Float32,2}",100)` | **1.19 {F}** | 0.87 | 1.0 | 1.0 |
-| `(:sumvector,"BaseBenchmarks.ArrayBenchmarks.ArrayLSLS{Float32,2}",100)` | **3.18 {F}** | 0.7 | **1.37 {F}** | **1.67 {F}** |
-| `(:sumvector,"SubArray{Float32,2,Array{Float32,2},Tuple{UnitRange{Int64},UnitRange{Int64}},1}",100)` | 0.95 | 1.09 | 1.0 | 1.0 |
-| `(:sumlogical,"BaseBenchmarks.ArrayBenchmarks.ArrayLSLS{Int64,2}",100)` | **1.42 {F}** | 0.78 | 1.03 | **1.5 {F}** |
-| `(:sumeach,"BaseBenchmarks.ArrayBenchmarks.ArrayLS{Float32,2}",100)` | 1.06 | 1.0 | 1.0 | 1.0 |
-| `(:sumlinear,"BaseBenchmarks.ArrayBenchmarks.ArrayLF{Int64,2}",100)` | 1.0 | 1.0 | 1.0 | 1.0 |
-| `(:sumvector,"BaseBenchmarks.ArrayBenchmarks.ArrayLF{Int64,2}",100000)` | **3.39 {F}** | 0.45 | **1.37 {F}** | **2.0 {F}** |
-| `(:sumelt,"SubArray{Int64,2,Array{Int64,2},Tuple{UnitRange{Int64},UnitRange{Int64}},1}",100)` | **1.15 {F}** | 1.0 | 1.0 | 1.0 |
-| `(:sumlinear,"SubArray{Int64,2,Array{Int64,2},Tuple{UnitRange{Int64},UnitRange{Int64}},1}",100000)` | 0.98 | 1.0 | 1.0 | 1.0 |
-| `(:sumcolon,"SubArray{Float32,2,Array{Float32,2},Tuple{UnitRange{Int64},UnitRange{Int64}},1}",100)` | 1.06 | 1.05 | 1.0 | 1.0 |
-| `(:sumcolon,"BaseBenchmarks.ArrayBenchmarks.ArrayLSLS{Float32,2}",100)` | **1.97 {F}** | 0.52 | 1.0 | 1.0 |
-| `(:sumeach,"BitArray{2}",100000)` | 1.01 | 1.0 | 1.0 | 1.0 |
-| `(:sumlogical,"BaseBenchmarks.ArrayBenchmarks.ArrayLS{Int64,2}",100)` | **1.41 {F}** | 0.77 | 1.04 | **1.67 {F}** |
-| `(:sumcartesian,"BaseBenchmarks.ArrayBenchmarks.ArrayLS{Float32,2}",100)` | 0.95 | 1.0 | 1.0 | 1.0 |
-| `(:sumvector,"BaseBenchmarks.ArrayBenchmarks.ArrayLF{Float32,2}",100000)` | **3.57 {F}** | 0.54 | **1.43 {F}** | **2.0 {F}** |
-| `(:sumrange,"Array{Int64,2}",100000)` | **4.56 {F}** | 0.3 | **1.27 {F}** | **1.5 {F}** |
-| `(:sumcolon,"BaseBenchmarks.ArrayBenchmarks.ArrayLF{Int64,2}",100000)` | 0.91 | **1.16 {F}** | 1.0 | 1.0 |
-| `(:sumcartesian,"BitArray{2}",100000)` | 1.06 | 1.0 | 1.0 | 1.0 |
-| `(:sumlinear,"BaseBenchmarks.ArrayBenchmarks.ArrayLSLS{Int64,2}",100000)` | 0.96 | 1.0 | 1.0 | 1.0 |
-| `(:sumvector,"SubArray{Float32,2,Array{Float32,2},Tuple{UnitRange{Int64},UnitRange{Int64}},1}",100000)` | 0.95 | 1.05 | 1.0 | 1.0 |
-| `(:sumcolon,"BaseBenchmarks.ArrayBenchmarks.ArrayLF{Float32,2}",100000)` | 0.96 | 1.07 | 1.0 | 1.0 |
-| `(:sumrange,"BaseBenchmarks.ArrayBenchmarks.ArrayLS{Float32,2}",100000)` | **2.93 {F}** | 0.43 | **1.3 {F}** | **1.5 {F}** |
-| `(:sumelt,"BaseBenchmarks.ArrayBenchmarks.ArrayLS{Float32,2}",100)` | 1.0 | 1.0 | 1.0 | 1.0 |
-| `(:sumcolon,"SubArray{Float32,2,Array{Float32,2},Tuple{UnitRange{Int64},UnitRange{Int64}},1}",100000)` | 0.98 | 0.96 | 1.0 | 1.0 |
-| `(:sumrange,"Array{Float32,2}",100000)` | **2.98 {F}** | 0.42 | **1.3 {F}** | **1.5 {F}** |
-| `(:sumrange,"Array{Float32,2}",100)` | **1.51 {F}** | 0.74 | 1.03 | **1.5 {F}** |
-| `(:sumelt,"BitArray{2}",100000)` | 0.99 | 1.0 | 1.0 | 1.0 |
-| `(:sumlogical,"Array{Int64,2}",100000)` | **2.97 {F}** | 0.45 | **1.27 {F}** | **1.67 {F}** |
-| `(:sumvector,"BaseBenchmarks.ArrayBenchmarks.ArrayLF{Int64,2}",100)` | **3.21 {F}** | 0.53 | **1.37 {F}** | **2.0 {F}** |
-| `(:sumvector,"SubArray{Int64,2,Array{Int64,2},Tuple{UnitRange{Int64},UnitRange{Int64}},1}",100000)` | 0.95 | 1.05 | 1.0 | 1.0 |
-| `(:sumrange,"SubArray{Float32,2,Array{Float32,2},Tuple{UnitRange{Int64},UnitRange{Int64}},1}",100)` | 1.01 | 1.01 | 1.0 | 1.0 |
-| `(:sumrange,"BaseBenchmarks.ArrayBenchmarks.ArrayLSLS{Float32,2}",100)` | **1.8 {F}** | 0.61 | 1.03 | **1.4 {F}** |
+| `(:sumrange,"SubArray{Int64,2,Array{Int64,2},Tuple{UnitRange{Int64},UnitRange{Int64}},1}",100)` | 1.01 | 0.99 | 1.0 | 1.0 |
+| `(:sumeach,"BaseBenchmarks.ArrayBenchmarks.ArrayLF{Int64,2}",100)` | 1.0 | 1.0 | 1.0 | 1.0 |
+| `(:sumvector,"Array{Int64,2}",100)` | **3.95 {R}** | 0.47 | **1.37 {R}** | **2.0 {R}** |
+| `(:sumlinear,"BaseBenchmarks.ArrayBenchmarks.ArrayLS{Int64,2}",100)` | 0.99 | 1.0 | 1.0 | 1.0 |
+| `(:sumvector,"BaseBenchmarks.ArrayBenchmarks.ArrayLF{Int64,2}",100)` | **3.72 {R}** | 0.47 | **1.37 {R}** | **2.0 {R}** |
+| `(:sumrange,"BaseBenchmarks.ArrayBenchmarks.ArrayLSLS{Int64,2}",100)` | **1.94 {R}** | 0.55 | 1.02 | **1.4 {R}** |
+| `(:sumcartesian,"Array{Int64,2}",100)` | 0.84 | 1.0 | 1.0 | 1.0 |
+| `(:sumlogical,"Array{Int64,2}",100)` | **1.52 {R}** | 0.78 | 1.04 | **1.67 {R}** |
+| `(:sumcartesian,"BaseBenchmarks.ArrayBenchmarks.ArrayLF{Int64,2}",100)` | 1.03 | 1.0 | 1.0 | 1.0 |
+| `(:sumlogical,"BaseBenchmarks.ArrayBenchmarks.ArrayLF{Int64,2}",100)` | **1.55 {R}** | 0.76 | 1.04 | **1.67 {R}** |
 | `(:sumeach,"BitArray{2}",100)` | 1.0 | 1.0 | 1.0 | 1.0 |
-| `(:sumeach,"BaseBenchmarks.ArrayBenchmarks.ArrayLS{Int64,2}",100000)` | 0.77 | 1.0 | 1.0 | 1.0 |
-| `(:sumcolon,"BaseBenchmarks.ArrayBenchmarks.ArrayLF{Int64,2}",100)` | **1.26 {F}** | 0.8 | 1.0 | 1.0 |
-| `(:sumlogical,"BaseBenchmarks.ArrayBenchmarks.ArrayLS{Float32,2}",100000)` | **2.68 {F}** | 0.5 | **1.27 {F}** | **1.67 {F}** |
-| `(:sumrange,"BaseBenchmarks.ArrayBenchmarks.ArrayLF{Int64,2}",100000)` | **4.33 {F}** | 0.31 | **1.27 {F}** | **1.5 {F}** |
-| `(:sumcolon,"SubArray{Int64,2,Array{Int64,2},Tuple{UnitRange{Int64},UnitRange{Int64}},1}",100000)` | 0.99 | 1.04 | 1.0 | 1.0 |
-| `(:sumcartesian,"BitArray{2}",100)` | 1.0 | 1.0 | 1.0 | 1.0 |
-| `(:sumlinear,"BaseBenchmarks.ArrayBenchmarks.ArrayLF{Float32,2}",100)` | 1.0 | 1.0 | 1.0 | 1.0 |
-| `(:sumvector,"BaseBenchmarks.ArrayBenchmarks.ArrayLSLS{Int64,2}",100000)` | **3.23 {F}** | 0.45 | **1.33 {F}** | **1.67 {F}** |
-| `(:sumeach,"BaseBenchmarks.ArrayBenchmarks.ArrayLSLS{Int64,2}",100)` | 0.98 | 1.0 | 1.0 | 1.0 |
-| `(:sumcartesian,"BaseBenchmarks.ArrayBenchmarks.ArrayLS{Int64,2}",100000)` | 1.0 | 1.0 | 1.0 | 1.0 |
-| `(:sumrange,"BaseBenchmarks.ArrayBenchmarks.ArrayLF{Float32,2}",100000)` | **2.83 {F}** | 0.44 | **1.3 {F}** | **1.5 {F}** |
-| `(:sumlogical,"Array{Float32,2}",100000)` | **2.68 {F}** | 0.5 | **1.27 {F}** | **1.67 {F}** |
-| `(:sumlogical,"Array{Float32,2}",100)` | **1.39 {F}** | 0.84 | 1.04 | **1.67 {F}** |
-| `(:sumcartesian,"BaseBenchmarks.ArrayBenchmarks.ArrayLSLS{Int64,2}",100)` | **1.13 {F}** | 1.0 | 1.0 | 1.0 |
-| `(:sumcolon,"BaseBenchmarks.ArrayBenchmarks.ArrayLSLS{Int64,2}",100000)` | 0.93 | **1.12 {F}** | 1.0 | 1.0 |
-| `(:sumlinear,"BaseBenchmarks.ArrayBenchmarks.ArrayLSLS{Float32,2}",100000)` | 0.99 | 1.0 | 1.0 | 1.0 |
-| `(:sumrange,"SubArray{Float32,2,Array{Float32,2},Tuple{UnitRange{Int64},UnitRange{Int64}},1}",100000)` | 0.98 | 0.96 | 1.0 | 1.0 |
-| `(:sumeach,"BaseBenchmarks.ArrayBenchmarks.ArrayLS{Int64,2}",100)` | 0.98 | 1.0 | 1.0 | 1.0 |
-| `(:sumlogical,"SubArray{Float32,2,Array{Float32,2},Tuple{UnitRange{Int64},UnitRange{Int64}},1}",100)` | 1.05 | 0.99 | 1.0 | 1.0 |
-| `(:sumlogical,"BaseBenchmarks.ArrayBenchmarks.ArrayLSLS{Float32,2}",100)` | **1.45 {F}** | 0.79 | 1.04 | **1.5 {F}** |
+| `(:sumcolon,"Array{Int64,2}",100)` | 0.9 | 0.95 | 1.0 | 1.0 |
+| `(:sumeach,"SubArray{Int64,2,Array{Int64,2},Tuple{UnitRange{Int64},UnitRange{Int64}},1}",100)` | 1.15 | 1.0 | 1.0 | 1.0 |
+| `(:sumcolon,"BaseBenchmarks.ArrayBenchmarks.ArrayLF{Int64,2}",100)` | **1.21 {R}** | 0.83 | 1.0 | 1.0 |
+| `(:sumvector,"BitArray{2}",100)` | **2.03 {R}** | 0.79 | **1.37 {R}** | **1.67 {R}** |
+| `(:sumrange,"BaseBenchmarks.ArrayBenchmarks.ArrayLS{Int64,2}",100)` | **1.67 {R}** | 0.62 | 1.02 | **1.5 {R}** |
+| `(:sumcartesian,"BitArray{2}",100)` | 1.01 | 1.0 | 1.0 | 1.0 |
+| `(:sumlogical,"BitArray{2}",100)` | **1.45 {R}** | 0.82 | 1.06 | **1.5 {R}** |
+| `(:sumvector,"SubArray{Int64,2,Array{Int64,2},Tuple{UnitRange{Int64},UnitRange{Int64}},1}",100)` | 0.94 | 1.06 | 1.0 | 1.0 |
+| `(:sumeach,"BaseBenchmarks.ArrayBenchmarks.ArrayLSLS{Int64,2}",100)` | 1.01 | 1.0 | 1.0 | 1.0 |
+| `(:sumelt,"Array{Int64,2}",100)` | 1.0 | 1.0 | 1.0 | 1.0 |
+| `(:sumcartesian,"SubArray{Int64,2,Array{Int64,2},Tuple{UnitRange{Int64},UnitRange{Int64}},1}",100)` | 1.03 | 1.0 | 1.0 | 1.0 |
+| `(:sumlogical,"SubArray{Int64,2,Array{Int64,2},Tuple{UnitRange{Int64},UnitRange{Int64}},1}",100)` | 1.1 | 1.0 | 1.0 | 1.0 |
+| `(:sumelt,"BaseBenchmarks.ArrayBenchmarks.ArrayLF{Int64,2}",100)` | 1.0 | 1.0 | 1.0 | 1.0 |
+| `(:sumcolon,"BitArray{2}",100)` | **3.47 {R}** | 0.28 | 0.91 | 0.75 |
+| `(:sumvector,"BaseBenchmarks.ArrayBenchmarks.ArrayLSLS{Int64,2}",100)` | **3.76 {R}** | 0.5 | **1.33 {R}** | **1.67 {R}** |
+| `(:sumcolon,"SubArray{Int64,2,Array{Int64,2},Tuple{UnitRange{Int64},UnitRange{Int64}},1}",100)` | 1.01 | 0.94 | 1.0 | 1.0 |
+| `(:sumcartesian,"BaseBenchmarks.ArrayBenchmarks.ArrayLSLS{Int64,2}",100)` | 1.0 | 1.0 | 1.0 | 1.0 |
+| `(:sumlogical,"BaseBenchmarks.ArrayBenchmarks.ArrayLSLS{Int64,2}",100)` | **1.56 {R}** | 0.76 | 1.03 | **1.5 {R}** |
+| `(:sumeach,"BaseBenchmarks.ArrayBenchmarks.ArrayLS{Int64,2}",100)` | 1.02 | 1.0 | 1.0 | 1.0 |
 | `(:sumelt,"BitArray{2}",100)` | 1.0 | 1.0 | 1.0 | 1.0 |
 | `(:sumlinear,"Array{Int64,2}",100)` | 1.0 | 1.0 | 1.0 | 1.0 |
-| `(:sumelt,"BaseBenchmarks.ArrayBenchmarks.ArrayLS{Int64,2}",100000)` | 0.84 | 1.0 | 1.0 | 1.0 |
-| `(:sumcartesian,"BaseBenchmarks.ArrayBenchmarks.ArrayLS{Int64,2}",100)` | 1.08 | 1.0 | 1.0 | 1.0 |
-| `(:sumlogical,"BaseBenchmarks.ArrayBenchmarks.ArrayLF{Int64,2}",100000)` | **2.84 {F}** | 0.47 | **1.27 {F}** | **1.67 {F}** |
-| `(:sumelt,"BaseBenchmarks.ArrayBenchmarks.ArrayLSLS{Int64,2}",100)` | **1.21 {F}** | 1.0 | 1.0 | 1.0 |
-| `(:sumlogical,"BaseBenchmarks.ArrayBenchmarks.ArrayLF{Float32,2}",100000)` | **2.58 {F}** | 0.53 | **1.27 {F}** | **1.67 {F}** |
-| `(:sumrange,"BaseBenchmarks.ArrayBenchmarks.ArrayLF{Int64,2}",100)` | **1.69 {F}** | 0.63 | 1.02 | **1.5 {F}** |
-| `(:sumrange,"SubArray{Int64,2,Array{Int64,2},Tuple{UnitRange{Int64},UnitRange{Int64}},1}",100000)` | 1.01 | 1.05 | 1.0 | 1.0 |
-| `(:sumlinear,"SubArray{Int64,2,Array{Int64,2},Tuple{UnitRange{Int64},UnitRange{Int64}},1}",100)` | 0.99 | 1.01 | 1.0 | 1.0 |
-| `(:sumvector,"BaseBenchmarks.ArrayBenchmarks.ArrayLF{Float32,2}",100)` | **3.21 {F}** | 0.71 | **1.43 {F}** | **2.0 {F}** |
-| `(:sumelt,"BaseBenchmarks.ArrayBenchmarks.ArrayLS{Int64,2}",100)` | 0.98 | 1.0 | 1.0 | 1.0 |
-| `(:sumlogical,"SubArray{Float32,2,Array{Float32,2},Tuple{UnitRange{Int64},UnitRange{Int64}},1}",100000)` | 0.91 | 1.04 | 1.0 | 1.0 |
-| `(:sumeach,"Array{Int64,2}",100000)` | **1.14 {F}** | 1.0 | 1.0 | 1.0 |
-| `(:sumcolon,"BaseBenchmarks.ArrayBenchmarks.ArrayLF{Float32,2}",100)` | **1.46 {F}** | 0.76 | 1.0 | 1.0 |
-| `(:sumvector,"BaseBenchmarks.ArrayBenchmarks.ArrayLSLS{Float32,2}",100000)` | **3.38 {F}** | 0.53 | **1.37 {F}** | **1.67 {F}** |
-| `(:sumrange,"BaseBenchmarks.ArrayBenchmarks.ArrayLSLS{Int64,2}",100000)` | **3.98 {F}** | 0.35 | **1.25 {F}** | **1.4 {F}** |
-| `(:sumvector,"Array{Int64,2}",100)` | **3.39 {F}** | 0.52 | **1.37 {F}** | **2.0 {F}** |
-| `(:sumcartesian,"Array{Int64,2}",100000)` | 1.0 | 1.0 | 1.0 | 1.0 |
-| `(:sumlinear,"BaseBenchmarks.ArrayBenchmarks.ArrayLS{Float32,2}",100)` | 0.99 | 1.0 | 1.0 | 1.0 |
-| `(:sumeach,"BaseBenchmarks.ArrayBenchmarks.ArrayLS{Float32,2}",100000)` | 1.0 | 1.0 | 1.0 | 1.0 |
-| `(:sumcolon,"BaseBenchmarks.ArrayBenchmarks.ArrayLSLS{Float32,2}",100000)` | 0.91 | 1.03 | 1.0 | 1.0 |
-| `(:sumlogical,"BaseBenchmarks.ArrayBenchmarks.ArrayLF{Int64,2}",100)` | **1.42 {F}** | 0.8 | 1.04 | **1.67 {F}** |
-| `(:sumlogical,"SubArray{Int64,2,Array{Int64,2},Tuple{UnitRange{Int64},UnitRange{Int64}},1}",100000)` | 0.91 | 1.06 | 1.0 | 1.0 |
-| `(:sumlinear,"BitArray{2}",100000)` | 1.01 | 1.0 | 1.0 | 1.0 |
-| `(:sumcolon,"Array{Int64,2}",100)` | **1.26 {F}** | 0.87 | 1.0 | 1.0 |
-| `(:sumeach,"Array{Float32,2}",100000)` | 1.0 | 1.0 | 1.0 | 1.0 |
-| `(:sumcartesian,"BaseBenchmarks.ArrayBenchmarks.ArrayLS{Float32,2}",100000)` | 0.84 | 1.0 | 1.0 | 1.0 |
-| `(:sumeach,"Array{Float32,2}",100)` | 1.0 | 1.0 | 1.0 | 1.0 |
-| `(:sumvector,"SubArray{Int64,2,Array{Int64,2},Tuple{UnitRange{Int64},UnitRange{Int64}},1}",100)` | 0.95 | 1.06 | 1.0 | 1.0 |
-| `(:sumelt,"Array{Int64,2}",100000)` | 0.99 | 1.0 | 1.0 | 1.0 |
-| `(:sumcartesian,"Array{Float32,2}",100000)` | **1.14 {F}** | 1.0 | 1.0 | 1.0 |
-| `(:sumcartesian,"Array{Float32,2}",100)` | **1.35 {F}** | 1.0 | 1.0 | 1.0 |
-| `(:sumeach,"SubArray{Float32,2,Array{Float32,2},Tuple{UnitRange{Int64},UnitRange{Int64}},1}",100)` | 0.99 | 1.0 | 1.0 | 1.0 |
-| `(:sumlogical,"BaseBenchmarks.ArrayBenchmarks.ArrayLSLS{Int64,2}",100000)` | **2.91 {F}** | 0.47 | **1.25 {F}** | **1.5 {F}** |
-| `(:sumeach,"BaseBenchmarks.ArrayBenchmarks.ArrayLSLS{Float32,2}",100)` | 1.0 | 1.0 | 1.0 | 1.0 |
-| `(:sumcolon,"SubArray{Int64,2,Array{Int64,2},Tuple{UnitRange{Int64},UnitRange{Int64}},1}",100)` | 1.01 | 0.94 | 1.0 | 1.0 |
-| `(:sumelt,"BaseBenchmarks.ArrayBenchmarks.ArrayLS{Float32,2}",100000)` | 0.98 | 1.0 | 1.0 | 1.0 |
-| `(:sumeach,"BaseBenchmarks.ArrayBenchmarks.ArrayLF{Int64,2}",100000)` | 0.95 | 1.0 | 1.0 | 1.0 |
-| `(:sumrange,"BaseBenchmarks.ArrayBenchmarks.ArrayLF{Float32,2}",100)` | **1.78 {F}** | 0.65 | 1.03 | **1.5 {F}** |
-| `(:sumcartesian,"SubArray{Float32,2,Array{Float32,2},Tuple{UnitRange{Int64},UnitRange{Int64}},1}",100)` | 0.99 | 1.0 | 1.0 | 1.0 |
-| `(:sumcartesian,"BaseBenchmarks.ArrayBenchmarks.ArrayLSLS{Float32,2}",100)` | 1.0 | 1.0 | 1.0 | 1.0 |
-| `(:sumelt,"Array{Float32,2}",100000)` | 1.0 | 1.0 | 1.0 | 1.0 |
-| `(:sumeach,"BaseBenchmarks.ArrayBenchmarks.ArrayLF{Float32,2}",100000)` | 1.0 | 1.0 | 1.0 | 1.0 |
-| `(:sumelt,"Array{Float32,2}",100)` | 1.0 | 1.0 | 1.0 | 1.0 |
-| `(:sumvector,"BaseBenchmarks.ArrayBenchmarks.ArrayLS{Float32,2}",100)` | **3.48 {F}** | 0.7 | **1.43 {F}** | **2.0 {F}** |
-| `(:sumcartesian,"BaseBenchmarks.ArrayBenchmarks.ArrayLF{Int64,2}",100000)` | 0.99 | 1.0 | 1.0 | 1.0 |
-| `(:sumrange,"BaseBenchmarks.ArrayBenchmarks.ArrayLSLS{Float32,2}",100000)` | **2.61 {F}** | 0.48 | **1.27 {F}** | **1.4 {F}** |
-| `(:sumvector,"BitArray{2}",100000)` | **1.29 {F}** | 1.09 | **1.37 {F}** | **1.67 {F}** |
-| `(:sumcartesian,"BaseBenchmarks.ArrayBenchmarks.ArrayLF{Float32,2}",100000)` | 0.95 | 1.0 | 1.0 | 1.0 |
-| `(:sumeach,"SubArray{Float32,2,Array{Float32,2},Tuple{UnitRange{Int64},UnitRange{Int64}},1}",100000)` | 0.99 | 1.0 | 1.0 | 1.0 |
-| `(:sumrange,"Array{Int64,2}",100)` | **1.5 {F}** | 0.7 | 1.02 | **1.5 {F}** |
-| `(:sumlinear,"BitArray{2}",100)` | 1.07 | 1.0 | 1.0 | 1.0 |
-| `(:sumelt,"SubArray{Float32,2,Array{Float32,2},Tuple{UnitRange{Int64},UnitRange{Int64}},1}",100)` | 1.0 | 1.0 | 1.0 | 1.0 |
-| `(:sumcolon,"BaseBenchmarks.ArrayBenchmarks.ArrayLS{Float32,2}",100)` | **1.43 {F}** | 0.73 | 1.0 | 1.0 |
-| `(:sumelt,"BaseBenchmarks.ArrayBenchmarks.ArrayLSLS{Float32,2}",100)` | 1.01 | 1.0 | 1.0 | 1.0 |
-| `(:sumlinear,"BaseBenchmarks.ArrayBenchmarks.ArrayLS{Int64,2}",100000)` | 0.96 | 1.0 | 1.0 | 1.0 |
-| `(:sumcartesian,"SubArray{Float32,2,Array{Float32,2},Tuple{UnitRange{Int64},UnitRange{Int64}},1}",100000)` | 1.0 | 1.0 | 1.0 | 1.0 |
-| `(:sumcolon,"BitArray{2}",100000)` | 0.8 | **1.22 {F}** | 1.0 | 1.0 |
-| `(:sumelt,"BaseBenchmarks.ArrayBenchmarks.ArrayLF{Int64,2}",100000)` | 1.02 | 1.0 | 1.0 | 1.0 |
-| `(:sumlogical,"BaseBenchmarks.ArrayBenchmarks.ArrayLF{Float32,2}",100)` | **1.43 {F}** | 0.81 | 1.04 | **1.67 {F}** |
-| `(:sumlinear,"BaseBenchmarks.ArrayBenchmarks.ArrayLSLS{Int64,2}",100)` | 0.96 | 1.0 | 1.0 | 1.0 |
-| `(:sumelt,"BaseBenchmarks.ArrayBenchmarks.ArrayLF{Float32,2}",100000)` | 1.0 | 1.0 | 1.0 | 1.0 |
-| `(:sumrange,"SubArray{Int64,2,Array{Int64,2},Tuple{UnitRange{Int64},UnitRange{Int64}},1}",100)` | 1.02 | 1.02 | 1.0 | 1.0 |
-| `(:sumeach,"BaseBenchmarks.ArrayBenchmarks.ArrayLF{Int64,2}",100)` | 1.0 | 1.0 | 1.0 | 1.0 |
-| `(:sumeach,"SubArray{Int64,2,Array{Int64,2},Tuple{UnitRange{Int64},UnitRange{Int64}},1}",100000)` | 1.01 | 1.0 | 1.0 | 1.0 |
-| `(:sumlogical,"BaseBenchmarks.ArrayBenchmarks.ArrayLSLS{Float32,2}",100000)` | **2.41 {F}** | 0.54 | **1.25 {F}** | **1.5 {F}** |
-| `(:sumlinear,"BaseBenchmarks.ArrayBenchmarks.ArrayLS{Int64,2}",100)` | 0.96 | 1.0 | 1.0 | 1.0 |
-| `(:sumelt,"SubArray{Float32,2,Array{Float32,2},Tuple{UnitRange{Int64},UnitRange{Int64}},1}",100000)` | 1.0 | 1.0 | 1.0 | 1.0 |
-| `(:sumlogical,"Array{Int64,2}",100)` | **1.39 {F}** | 0.82 | 1.04 | **1.67 {F}** |
-| `(:sumcartesian,"BaseBenchmarks.ArrayBenchmarks.ArrayLF{Int64,2}",100)` | **1.18 {F}** | 1.0 | 1.0 | 1.0 |
-| `(:sumcartesian,"SubArray{Int64,2,Array{Int64,2},Tuple{UnitRange{Int64},UnitRange{Int64}},1}",100000)` | 0.95 | 1.0 | 1.0 | 1.0 |
-| `(:sumeach,"BaseBenchmarks.ArrayBenchmarks.ArrayLSLS{Int64,2}",100000)` | 0.77 | 1.0 | 1.0 | 1.0 |
-| `(:sumvector,"BitArray{2}",100)` | **1.3 {F}** | **1.14 {F}** | **1.37 {F}** | **1.67 {F}** |
-| `(:sumrange,"BaseBenchmarks.ArrayBenchmarks.ArrayLS{Float32,2}",100)` | **1.77 {F}** | 0.63 | 1.03 | **1.5 {F}** |
-| `(:sumvector,"BaseBenchmarks.ArrayBenchmarks.ArrayLS{Int64,2}",100000)` | **3.54 {F}** | 0.42 | **1.37 {F}** | **2.0 {F}** |
-| `(:sumcartesian,"BaseBenchmarks.ArrayBenchmarks.ArrayLSLS{Int64,2}",100000)` | 0.99 | 1.0 | 1.0 | 1.0 |
-| `(:sumlogical,"SubArray{Int64,2,Array{Int64,2},Tuple{UnitRange{Int64},UnitRange{Int64}},1}",100)` | 1.05 | 0.99 | 1.0 | 1.0 |
-| `(:sumelt,"BaseBenchmarks.ArrayBenchmarks.ArrayLF{Int64,2}",100)` | 1.0 | 1.0 | 1.0 | 1.0 |
-| `(:sumrange,"BitArray{2}",100000)` | **1.41 {F}** | 0.84 | **1.25 {F}** | **1.4 {F}** |
-| `(:sumcolon,"BitArray{2}",100)` | **2.85 {F}** | 0.37 | 0.91 | 0.75 |
-| `(:sumelt,"SubArray{Int64,2,Array{Int64,2},Tuple{UnitRange{Int64},UnitRange{Int64}},1}",100000)` | 1.06 | 1.0 | 1.0 | 1.0 |
-| `(:sumvector,"BaseBenchmarks.ArrayBenchmarks.ArrayLSLS{Int64,2}",100)` | **3.1 {F}** | 0.54 | **1.33 {F}** | **1.67 {F}** |
-| `(:sumcolon,"BaseBenchmarks.ArrayBenchmarks.ArrayLS{Int64,2}",100000)` | 0.96 | 1.1 | 1.0 | 1.0 |
-| `(:sumlinear,"Array{Int64,2}",100000)` | 1.0 | 1.0 | 1.0 | 1.0 |
-| `(:sumcolon,"BaseBenchmarks.ArrayBenchmarks.ArrayLSLS{Int64,2}",100)` | **1.43 {F}** | 0.65 | 1.0 | 1.0 |
-| `(:sumvector,"BaseBenchmarks.ArrayBenchmarks.ArrayLS{Int64,2}",100)` | **3.36 {F}** | 0.53 | **1.37 {F}** | **2.0 {F}** |
-| `(:sumelt,"BaseBenchmarks.ArrayBenchmarks.ArrayLSLS{Int64,2}",100000)` | 0.98 | 1.0 | 1.0 | 1.0 |
-| `(:sumlogical,"BaseBenchmarks.ArrayBenchmarks.ArrayLS{Float32,2}",100)` | **1.45 {F}** | 0.79 | 1.04 | **1.67 {F}** |
-| `(:sumlinear,"BaseBenchmarks.ArrayBenchmarks.ArrayLS{Float32,2}",100000)` | 0.99 | 1.0 | 1.0 | 1.0 |
-| `(:sumcolon,"BaseBenchmarks.ArrayBenchmarks.ArrayLS{Int64,2}",100)` | **1.27 {F}** | 0.74 | 1.0 | 1.0 |
-| `(:sumeach,"BaseBenchmarks.ArrayBenchmarks.ArrayLF{Float32,2}",100)` | 1.0 | 1.0 | 1.0 | 1.0 |
-| `(:sumlogical,"BitArray{2}",100000)` | **1.14 {F}** | 1.09 | **1.23 {F}** | **1.5 {F}** |
+| `(:sumcolon,"BaseBenchmarks.ArrayBenchmarks.ArrayLSLS{Int64,2}",100)` | **1.39 {R}** | 0.7 | 1.0 | 1.0 |
+| `(:sumlinear,"BaseBenchmarks.ArrayBenchmarks.ArrayLF{Int64,2}",100)` | 1.0 | 1.0 | 1.0 | 1.0 |
+| `(:sumvector,"BaseBenchmarks.ArrayBenchmarks.ArrayLS{Int64,2}",100)` | **3.97 {R}** | 0.46 | **1.37 {R}** | **2.0 {R}** |
+| `(:sumelt,"SubArray{Int64,2,Array{Int64,2},Tuple{UnitRange{Int64},UnitRange{Int64}},1}",100)` | 1.0 | 1.0 | 1.0 | 1.0 |
+| `(:sumcartesian,"BaseBenchmarks.ArrayBenchmarks.ArrayLS{Int64,2}",100)` | **1.25 {R}** | 1.0 | 1.0 | 1.0 |
+| `(:sumlogical,"BaseBenchmarks.ArrayBenchmarks.ArrayLS{Int64,2}",100)` | **1.56 {R}** | 0.77 | 1.04 | **1.67 {R}** |
+| `(:sumelt,"BaseBenchmarks.ArrayBenchmarks.ArrayLSLS{Int64,2}",100)` | 0.97 | 1.0 | 1.0 | 1.0 |
+| `(:sumcolon,"BaseBenchmarks.ArrayBenchmarks.ArrayLS{Int64,2}",100)` | **1.21 {R}** | 0.82 | 1.0 | 1.0 |
+| `(:sumrange,"Array{Int64,2}",100)` | **1.5 {R}** | 0.69 | 1.02 | **1.5 {R}** |
+| `(:sumlinear,"BitArray{2}",100)` | 1.0 | 1.0 | 1.0 | 1.0 |
+| `(:sumrange,"BaseBenchmarks.ArrayBenchmarks.ArrayLF{Int64,2}",100)` | **1.67 {R}** | 0.63 | 1.02 | **1.5 {R}** |
 
