--- a/c284a86/c284a86_vs_c284a86.md
+++ b/c284a86/c284a86_vs_c284a86.md
@@ -4,7 +4,7 @@
 
 *Commit(s):* [jrevels/julia@c284a86dc9a198e30a914cdb2523391884482df8](https://github.com/jrevels/julia/commit/c284a86dc9a198e30a914cdb2523391884482df8) vs [jrevels/julia@c284a86dc9a198e30a914cdb2523391884482df8](https://github.com/jrevels/julia/commit/c284a86dc9a198e30a914cdb2523391884482df8)
 
-*Triggered By:* [link](https://github.com/jrevels/julia/pull/2#issuecomment-215871888)
+*Triggered By:* [link](https://github.com/jrevels/julia/pull/2#issuecomment-215889675)
 
 *Tag Predicate:* `ALL`
 
@@ -29,10 +29,13 @@ benchmark results remained invariant between builds).
 
 | ID | time ratio | memory ratio |
 |----|------------|--------------|
-| `["linalg","factorization",("eigfact","Diagonal",256)]` | 0.68 (10.00%) :white_check_mark: | 1.00 (1.00%)  |
-| `["scalar","arithmetic",("sub","Float64","Complex{Int64}")]` | 0.67 (20.00%) :white_check_mark: | 1.00 (1.00%)  |
-| `["sparse","index",("spmat","row","logical",1000)]` | 1.14 (10.00%) :x: | 1.00 (1.00%)  |
-| `["tuple","index",("sumelt","TupleWrapper",30,Float64)]` | 0.88 (10.00%) :white_check_mark: | 1.00 (1.00%)  |
+| `["array","setindex!",("setindex!",1)]` | 1.13 (10.00%) :x: | 1.00 (1.00%)  |
+| `["array","setindex!",("setindex!",2)]` | 1.14 (10.00%) :x: | 1.00 (1.00%)  |
+| `["array","setindex!",("setindex!",3)]` | 1.10 (10.00%) :x: | 1.00 (1.00%)  |
+| `["array","setindex!",("setindex!",4)]` | 1.11 (10.00%) :x: | 1.00 (1.00%)  |
+| `["linalg","factorization",("eigfact","Diagonal",256)]` | 0.87 (10.00%) :white_check_mark: | 1.00 (1.00%)  |
+| `["scalar","arithmetic",("sub","Float64","Complex{Int64}")]` | 1.50 (20.00%) :x: | 1.00 (1.00%)  |
+| `["tuple","index",("sumelt","TupleWrapper",30,Float64)]` | 0.54 (10.00%) :white_check_mark: | 1.00 (1.00%)  |
 
 ## Benchmark Group List
 
@@ -89,15 +92,15 @@ Platform Info:
   WORD_SIZE: 64
            Ubuntu 14.04.4 LTS
   uname: Linux 3.13.0-65-generic #105-Ubuntu SMP Mon Sep 21 18:50:58 UTC 2015 x86_64 x86_64
-Memory: 31.383678436279297 GB (13285.44921875 MB free)
-Uptime: 1.8334403e7 sec
-Load Avg:  1.0029296875  0.98876953125  0.92919921875
+Memory: 31.383678436279297 GB (13320.359375 MB free)
+Uptime: 1.8339016e7 sec
+Load Avg:  1.0029296875  1.0146484375  0.8359375
 Intel(R) Xeon(R) CPU E3-1241 v3 @ 3.50GHz: 
        speed         user         nice          sys         idle          irq
-#1  3501 MHz   14358356 s       4540 s    6029684 s  1806276549 s          6 s
-#2  3501 MHz   18458428 s        142 s    2403734 s  1810223445 s          0 s
-#3  3501 MHz   10205291 s       1153 s    2795584 s  1818394518 s          1 s
-#4  3501 MHz    8980821 s        423 s    2368789 s  1820528516 s          0 s
+#1  3501 MHz   14360130 s       4540 s    6031148 s  1806732993 s          6 s
+#2  3501 MHz   18742970 s        142 s    2404557 s  1810398953 s          0 s
+#3  3501 MHz   10205508 s       1153 s    2795847 s  1818855161 s          1 s
+#4  3501 MHz    8981102 s        423 s    2368951 s  1820989277 s          0 s
 
   BLAS: libopenblas (USE64BITINT DYNAMIC_ARCH NO_AFFINITY Haswell)
   LAPACK: libopenblas64_
@@ -117,15 +120,15 @@ Platform Info:
   WORD_SIZE: 64
            Ubuntu 14.04.4 LTS
   uname: Linux 3.13.0-65-generic #105-Ubuntu SMP Mon Sep 21 18:50:58 UTC 2015 x86_64 x86_64
-Memory: 31.383678436279297 GB (13282.61328125 MB free)
-Uptime: 1.8335862e7 sec
-Load Avg:  1.0703125  1.0302734375  0.97607421875
+Memory: 31.383678436279297 GB (13311.65625 MB free)
+Uptime: 1.8340472e7 sec
+Load Avg:  1.0048828125  1.0146484375  0.96533203125
 Intel(R) Xeon(R) CPU E3-1241 v3 @ 3.50GHz: 
        speed         user         nice          sys         idle          irq
-#1  3501 MHz   14358883 s       4540 s    6030302 s  1806420625 s          6 s
-#2  3501 MHz   18602045 s        142 s    2404047 s  1810225226 s          0 s
-#3  3501 MHz   10205350 s       1153 s    2795636 s  1818540197 s          1 s
-#4  3501 MHz    8980851 s        423 s    2368837 s  1820674243 s          0 s
+#1  3501 MHz   14360763 s       4540 s    6031777 s  1806876787 s          6 s
+#2  3501 MHz   18886426 s        142 s    2404860 s  1810400683 s          0 s
+#3  3501 MHz   10205548 s       1153 s    2795894 s  1819000656 s          1 s
+#4  3501 MHz    8981136 s        423 s    2368985 s  1821134800 s          0 s
 
   BLAS: libopenblas (USE64BITINT DYNAMIC_ARCH NO_AFFINITY Haswell)
   LAPACK: libopenblas64_
