--- a/c284a86/c284a86_vs_c284a86.md
+++ b/c284a86/c284a86_vs_c284a86.md
@@ -4,7 +4,7 @@
 
 *Commit(s):* [jrevels/julia@c284a86dc9a198e30a914cdb2523391884482df8](https://github.com/jrevels/julia/commit/c284a86dc9a198e30a914cdb2523391884482df8) vs [jrevels/julia@c284a86dc9a198e30a914cdb2523391884482df8](https://github.com/jrevels/julia/commit/c284a86dc9a198e30a914cdb2523391884482df8)
 
-*Triggered By:* [link](https://github.com/jrevels/julia/pull/2#issuecomment-215909216)
+*Triggered By:* [link](https://github.com/jrevels/julia/pull/2#issuecomment-216255368)
 
 *Tag Predicate:* `ALL`
 
@@ -29,7 +29,9 @@ benchmark results remained invariant between builds).
 
 | ID | time ratio | memory ratio |
 |----|------------|--------------|
-| `["array","index",("sumelt","SubArray{Float32,2,Array{Float32,2},Tuple{UnitRange{Int64},UnitRange{Int64}},false}")]` | 0.74 (15.00%) :white_check_mark: | 1.00 (1.00%)  |
+| `["linalg","arithmetic",("+","Vector","Vector",256)]` | 1.23 (20.00%) :x: | 1.00 (1.00%)  |
+| `["sort","issorted",("reverse","descending")]` | 1.20 (15.00%) :x: | 1.00 (1.00%)  |
+| `["tuple","index",("sumelt","TupleWrapper",8,Float64)]` | 1.33 (20.00%) :x: | 1.00 (1.00%)  |
 
 ## Benchmark Group List
 
@@ -86,15 +88,15 @@ Platform Info:
   WORD_SIZE: 64
            Ubuntu 14.04.4 LTS
   uname: Linux 3.13.0-65-generic #105-Ubuntu SMP Mon Sep 21 18:50:58 UTC 2015 x86_64 x86_64
-Memory: 31.383678436279297 GB (13278.73828125 MB free)
-Uptime: 1.8346433e7 sec
-Load Avg:  1.00439453125  1.001953125  0.91943359375
+Memory: 31.383678436279297 GB (13340.40625 MB free)
+Uptime: 1.8573294e7 sec
+Load Avg:  0.9970703125  0.9853515625  0.80908203125
 Intel(R) Xeon(R) CPU E3-1241 v3 @ 3.50GHz: 
        speed         user         nice          sys         idle          irq
-#1  3501 MHz   14363917 s       4540 s    6033883 s  1807465328 s          6 s
-#2  3501 MHz   19309794 s        142 s    2405988 s  1810571819 s          0 s
-#3  3501 MHz   10206322 s       1153 s    2796166 s  1819595554 s          1 s
-#4  3501 MHz    8981469 s        423 s    2369162 s  1821730270 s          0 s
+#1  3501 MHz   14379215 s       4555 s    6068652 s  1830045113 s          9 s
+#2  3501 MHz   19809866 s        142 s    2426592 s  1832716595 s          0 s
+#3  3501 MHz   10210558 s       1153 s    2818616 s  1842240372 s          1 s
+#4  3501 MHz    8985558 s        454 s    2378922 s  1844395128 s          0 s
 
   BLAS: libopenblas (USE64BITINT DYNAMIC_ARCH NO_AFFINITY Haswell)
   LAPACK: libopenblas64_
@@ -114,15 +116,15 @@ Platform Info:
   WORD_SIZE: 64
            Ubuntu 14.04.4 LTS
   uname: Linux 3.13.0-65-generic #105-Ubuntu SMP Mon Sep 21 18:50:58 UTC 2015 x86_64 x86_64
-Memory: 31.383678436279297 GB (13275.61328125 MB free)
-Uptime: 1.8347863e7 sec
-Load Avg:  1.0029296875  1.0146484375  0.97021484375
+Memory: 31.383678436279297 GB (13333.71875 MB free)
+Uptime: 1.8574806e7 sec
+Load Avg:  1.0029296875  1.0146484375  0.95458984375
 Intel(R) Xeon(R) CPU E3-1241 v3 @ 3.50GHz: 
        speed         user         nice          sys         idle          irq
-#1  3501 MHz   14364010 s       4540 s    6034504 s  1807607015 s          6 s
-#2  3501 MHz   19450610 s        142 s    2406304 s  1810573605 s          0 s
-#3  3501 MHz   10206355 s       1153 s    2796216 s  1819738461 s          1 s
-#4  3501 MHz    8981496 s        423 s    2369214 s  1821873195 s          0 s
+#1  3501 MHz   14379283 s       4555 s    6069313 s  1830194961 s          9 s
+#2  3501 MHz   19958619 s        142 s    2427088 s  1832718469 s          0 s
+#3  3501 MHz   10210802 s       1153 s    2818663 s  1842391300 s          1 s
+#4  3501 MHz    8985605 s        454 s    2378951 s  1844546282 s          0 s
 
   BLAS: libopenblas (USE64BITINT DYNAMIC_ARCH NO_AFFINITY Haswell)
   LAPACK: libopenblas64_
